# immutables

./: .gitignore  README.md  pyproject.toml
src/immutables/: __init__.py  _translator.py
tests/immutables/: test_immutable.py
