[project]
name = "immutables"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Yutaka Kamioka", email = "umaibow@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=7.3.1",
    "pytest-unordered~=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true
